[tool.poetry]
name = "dox-api"
version = "0.1.0"
description = ""
authors = ["Lalo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.237"
langchain-serve = "^0.0.57"
openai = "^0.27.8"
duckduckgo-search = "^3.8.3"
python-dotenv = "^1.0.0"
fastapi = "^0.100.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
